# pwave-drf-api

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.ci/: skaffold.yaml
.ci/env.values/: app.yaml  bot.yaml  celery-beat.yaml  celery-worker.yaml  cronjobs.yaml  hooks.yaml  redis.yaml
accounts/: apps.py  backends.py  managers.py  schema.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_name_user_subscriber.py  0003_alter_user_name.py  0003_user_avatar_alter_user_name.py
accounts/tests/: test_api_auth.py  test_api_no_auth.py
ci/: db_dump.sh  docker-compose.test.yml  migrate.sh
logic/: cache.py  email.py  file_upload.py  indexing.py  redis_layer.py  ws_users.py
notification/: apps.py  consumers.py  models.py  routing.py  schema.py  serializers.py  urls.py  views.py
notification/create_notify/: context.py  creator.py  decorators.py  mixin.py  notification_type.py  tasks.py  utils.py
pulsewave/: __init__.py  asgi.py  celery.py  celeryconfig.py  middleware.py  pass_validators.py  prod_settings.py  requirements.txt  settings.py  urls.py  validators.py  wsgi.py
sse/: decorators.py  senders.py  storage.py  utils.py
taskmanager/: admin.py  apps.py  email.py  models.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  token.py  urls.py  utils.py  views.py
telebot/: .env.example  admin.py  bot.py  models.py  urls.py  utils.py  views.py
workspaces/: admin.py  apps.py  consumers.py  database.py  exeptions.py  logic.py  mixins.py  models.py  permissions.py  routing.py  schema.py  serializers.py  signals..py  signals.py  tasks.py  urls.py  views.py
(+59 files in other folders)
