[tool.poetry]
name = "pulsewave"
version = "1.0"
description = ""
authors = ["posholokia <ilya.posholokk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
django = "^4.2.8"
python = "^3.11"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
celery = "^5.3.6"
django-eventstream = "^4.5.1"
channels = "^3.0.0"
aiogram = "^3.2.0"
drf-spectacular = "^0.26.5"
djoser = "^2.2.2"
django-cors-headers = "^4.3.1"
django-storages = "^1.14.2"
boto3 = "^1.33.11"
freezegun = "^1.3.1"
gunicorn = "^21.2.0"
pillow = "^10.1.0"
redis = "^5.0.1"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
urllib3 = "1.26.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
