
[tool.poetry]
name = "pulsewave"
version = "1.0"
description = ""
authors = ["posholokia <ilya.posholokk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
django = "^4.2.8"
python = "^3.10"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
celery = "^5.3.6"
channels = "^4.0.0"
aiogram = "^3.2.0"
drf-spectacular = "^0.26.5"
djoser = "^2.2.2"
django-cors-headers = "^4.3.1"
django-storages = "^1.14.2"
boto3 = "^1.33.11"
freezegun = "^1.3.1"
gunicorn = "^21.2.0"
pillow = "^10.1.0"
redis = "^5.0.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.0"
django-cacheops = "^7.0.2"
django-celery-beat = "^2.5.0"
babel = "^2.14.0"
sentry-sdk = "^1.40.3"
channels-redis = "^4.2.0"
djangochannelsrestframework = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
